--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "dev:env": "./start-dev.sh",
     "build": "vite build",
+    "dev:local": "./start-dev.sh",
     "build:dist": "vite build --outDir=dist",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
